--- a/repo-assets/css/style.css
+++ b/repo-assets/css/style.css
@@ -30,6 +30,8 @@ h1, h2 {
     font-family: Helvetica, sans-serif;
 }
 
+.card {}
+
 th {
     color: white;
     font-family: Helvetica, sans-serif;
@@ -38,4 +40,23 @@ th {
 td {
     color: white;
     font-family: Helvetica, sans-serif;
+}
+
+.mainNumber {
+    background-color: red;
+    border: 2px white solid;
+    border-radius: 50%;
+    margin: 5px;
+    padding: 5px;
+    height: 30px;
+    width: 30px;
+    align-items: center;
+    display: flex;
+    text-align: center;
+    cursor: pointer;
+}
+
+.container {
+    margin: auto;
+    background-color: black;
 }
